# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import servicesRouter from "./services";
 import timeslotsRouter from "./timeslots";
 import statsRouter from "./stats";
 import eventsRouter from "./events";
+import appointmentCommentsRouter from "./appointment-comments";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use("/services", servicesRouter);
 router.use("/timeslots", timeslotsRouter);
 router.use("/stats", statsRouter);
 router.use("/events", eventsRouter);
+router.use("/timeslots", appointmentCommentsRouter);
 
 export default router;
