# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./users";
 export * from "./services";
 export * from "./timeslots";
+export * from "./appointment-comments";
